turned dark mode button into a toggle button

--- a/client/css/editor/toolbar.css
+++ b/client/css/editor/toolbar.css
@@ -15,6 +15,10 @@
   padding: 5px;
 }
 
+#editorToolbar button.active {
+  background: var(--VTTblueDark);
+}
+
 #editorToolbar button::before {
   margin: 0;
 }
