added drag toolbar button that only moves the toolbar

--- a/client/css/editor/dragtoolbar.css
+++ b/client/css/editor/dragtoolbar.css
@@ -1,40 +1,14 @@
-:root {
-  --editToolbarHeight: 36px;
-}
+/* see common rules in toolbar.css */
 
 #editorDragToolbar {
   display: none;
-  position: absolute;
-  background: var(--VTTblue);
   border-radius: 5px;
-  z-index: 3;
 }
 
 #editorDragToolbar.active {
   display: flex;
 }
 
-#editorDragToolbar button {
-  padding: 5px;
-}
-
-#editorDragToolbar button::before {
-  margin: 0;
-}
-
 #editorDragToolbar button span {
-  display: none;
-  position: absolute;
-  top: calc(var(--editToolbarHeight) + 1px);
-  background: var(--VTTblueDark);
   width: 200px;
-  margin: 0;
-  margin-left: -5px;
-  padding: 10px;
-  border-radius: 5px;
-  text-transform: none;
-}
-
-#editorDragToolbar button:hover span {
-  display: block;
 }
