--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -59,11 +59,11 @@ body.edit {
   display: block;
 }
 
-body.edit .widget.selectedInEdit:not(.pile) {
+body.edit:not(.dragToolbarDragging) .widget.selectedInEdit:not(.pile) {
   box-shadow: 0px 0px 0px 5px yellow;
 }
 
-body.edit .widget.selectedInEdit.pile .handle {
+body.edit:not(.dragToolbarDragging) .widget.selectedInEdit.pile .handle {
   box-shadow: 0px 0px 0px 5px yellow;
 }
 
@@ -73,9 +73,4 @@ body.edit .widget.selectedInEditPreview:not(.pile) {
 
 body.edit .widget.selectedInEditPreview.pile .handle {
   box-shadow: 0px 0px 0px 5px red;
-}
-
-body.edit .widget.selectedInEdit.deck {
-  visibility: visible;
-  font-size: 0;
 }
