--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -31,7 +31,7 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif, 'Noto Color Emoji', 'VTT-Symbols', 'Material Icons';
 }
 
 #roomArea {
