Made all the weights work. Removed unused weights.

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -32,6 +32,19 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: 'Roboto', sans-serif, 'Noto Color Emoji', 'VTT-Symbols', 'Material Icons';
+
+   /* Enable Ligatures ================ */
+   -webkit-font-feature-settings: "liga";
+   -moz-font-feature-settings: "liga=1";
+   -moz-font-feature-settings: "liga";
+   -ms-font-feature-settings: "liga" 1;
+   font-feature-settings: "liga";
+   -webkit-font-variant-ligatures: discretionary-ligatures;
+   font-variant-ligatures: discretionary-ligatures;
+
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 #roomArea {
