--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -74,3 +74,33 @@ body.edit:not(.dragToolbarDragging) .widget.selectedInEditPreview:not(.pile) {
 body.edit:not(.dragToolbarDragging) .widget.selectedInEditPreview.pile .handle {
   box-shadow: 0px 0px 0px 5px red;
 }
+
+.hintUI {
+  position: relative;
+}
+
+.hintUI > button {
+  position: absolute;
+  top: -34px;
+  right: 0;
+  margin: 0;
+}
+
+.hintUI > span {
+  display: none;
+  background: var(--VTTblue);
+  color: white;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  border-top-right-radius: 0;
+}
+
+.active.hintUI > button {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.active.hintUI > span {
+  display: block;
+}
