--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -140,7 +140,7 @@ body.aspectTooGood.hiddenToolbar {
       display: none;
     }
 
-    @media (min-height: 380px) {
+    @media (min-height: 350px) {
       body.wideToolbar #toolbar > img {
         display: block;
         margin: 10px 20px 3px 20px;
@@ -152,13 +152,22 @@ body.aspectTooGood.hiddenToolbar {
       }
     }
 
-    @media (max-height: 520px) {
+    @media (max-height: 450px) {
+      body.wideToolbar #toolbar .divider:nth-child(2) {
+        margin: 10px 10%;
+      }
+    }
+
+    @media (max-height: 430px) {
       body.wideToolbar #toolbar {
         padding: 0;
       }
       body.wideToolbar #toolbar > img {
         margin: 10px 20px;
       }
+    }
+
+    @media (max-height: 415px) {
       body.wideToolbar #toolbar .divider:nth-child(2) {
         display: none;
       }
@@ -203,7 +212,7 @@ body.aspectTooGood.hiddenToolbar {
       margin: auto 10px;
     }
 
-    @media (max-height: 520px) {
+    @media (max-height: 415px) {
       body.wideToolbar #toolbar .divider {
         display: none;
       }
@@ -270,7 +279,7 @@ body.aspectTooGood.hiddenToolbar {
 
     @media (max-height: 520px) {
       body.wideToolbar .toolbarButton:not(.toolbarTab) {
-        padding: 2px 10%;
+        padding: 0 10%;
       }
     }
 
@@ -322,7 +331,7 @@ body.aspectTooGood.hiddenToolbar {
       width: unset;
     }
 
-    @media (max-height: 520px) {
+    @media (max-height: 400px) {
       body.wideToolbar .toolbarTab {
         height: 30px;
       }
