--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -232,6 +232,7 @@
     font-family: "Material Icons";
     font-style: normal;
     font-weight: 400;
+    font-display: block;
     src: url("i/fonts/MaterialIcons-Regular.ttf") format("truetype");
 }
 
