prevent accidental text highlighting in drag toolbar feedback

--- a/client/css/editor/dragtoolbar.css
+++ b/client/css/editor/dragtoolbar.css
@@ -28,6 +28,7 @@ body.dragToolbarDragging #editorDragToolbar button:hover span {
   border-radius: inherit;
   padding: 10px;
   box-sizing: border-box;
+  user-select: none;
 }
 
 #editorDragToolbarFeedback i {
