--- a/client/css/keyboardmode.css
+++ b/client/css/keyboardmode.css
@@ -17,3 +17,11 @@
 .widget.keyboardHighlight.Enter {
   box-shadow: 0px 0px 0px 5px purple;
 }
+
+body.keyboardMode #buttonInputGo {
+  background: yellow;
+  color: black;
+}
+body.keyboardMode #buttonInputCancel {
+  background: green;
+}
