--- a/client/css/keyboardmode.css
+++ b/client/css/keyboardmode.css
@@ -1,21 +1,25 @@
 .widget.keyboardHighlight.ArrowUp {
-  box-shadow: 0px 0px 0px 5px red;
+  --highlightColor: red;
 }
 
 .widget.keyboardHighlight.ArrowRight {
-  box-shadow: 0px 0px 0px 5px yellow;
+  --highlightColor: yellow;
 }
 
 .widget.keyboardHighlight.ArrowDown {
-  box-shadow: 0px 0px 0px 5px blue;
+  --highlightColor: blue;
 }
 
 .widget.keyboardHighlight.ArrowLeft {
-  box-shadow: 0px 0px 0px 5px green;
+  --highlightColor: green;
 }
 
 .widget.keyboardHighlight.Enter {
-  box-shadow: 0px 0px 0px 5px purple;
+  --highlightColor: purple;
+}
+
+.widget:not(.pile).keyboardHighlight, .widget.pile.keyboardHighlight > .handle {
+  box-shadow: 0px 0px 0px 5px var(--highlightColor);
 }
 
 body.keyboardMode #buttonInputGo {
