--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -243,12 +243,13 @@ i.error   { color: var(--textHighlightColor3); font-weight: bold; }
   background: transparent;
 }
 
+#editor:hover #jeWidgetLayers, .editorModule:hover #jeWidgetLayers {
+  display: none;
+}
+
 #jeWidgetLayers > div {
-  display: inline-block;
   padding: 2px;
-  vertical-align: top;
   font-size: 12px;
-  margin-right: 4px;
 }
 
 #jeWidgetLayers > div:empty {
