added an easy way to generate a deck of cards by uploading images

--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -104,3 +104,11 @@ body.edit:not(.dragToolbarDragging) .widget.selectedInEditPreview.pile .handle {
 .active.hintUI > span {
   display: block;
 }
+
+
+.flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
