--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -137,6 +137,8 @@
   font-family: "Material Icons";
   font-size: 40px;
   position: absolute;
+  top: 5px;
+  left: 5px;
 }
 
 .image.editorModule .externalLink.queued::after {
@@ -164,4 +166,5 @@
 
 .image.editorModule .externalLink span {
   word-break: break-all;
+  padding: 5px;
 }
