fixed status icons of asset downloader

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -127,6 +127,7 @@
 
 .image.editorModule .externalLink {
   display: flex;
+  position: relative;
 }
 
 .image.editorModule .externalLink:nth-child(2n) {
