--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -140,6 +140,7 @@
   position: absolute;
   top: 5px;
   left: 5px;
+  text-shadow: 0 0 4px white;
 }
 
 .image.editorModule .externalLink.queued::after {
