tweaked margins for JSON editor command buttons

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -82,7 +82,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  right: var(--commandPaneWidth);
+  right: calc(var(--commandPaneWidth) + 1px);
   font-family: monospace;
   white-space: pre-wrap;
   overflow-y: auto;
@@ -332,7 +332,7 @@ body.jsonEdit #jeContextButtons {
 }
 
 body.jsonEdit #jeContextButtons > button {
-  width: calc(100% - 2px);
+  width: calc(100% - 3px);
   text-align: left;
 }
 
@@ -497,8 +497,8 @@ body.jsonEdit #toolbar {
 
 #jeCommands .context{
   font-weight: bold;
+  margin: 1px;
   margin-top: 8px;
-  width: 100%;
 }
 
 #jeContextButtons > button > b{
