--- a/client/css/widgets/spinner.css
+++ b/client/css/widgets/spinner.css
@@ -1,8 +1,12 @@
+.spinner {
+    --textColor:'#000000';
+    --lineColor :'#d2d2d2';
+}
+
 .spinner > svg.background {
   position: absolute;
   background: white;
-  color: black;
-  border: 1px solid #d2d2d2;
+  border: 1px solid var(--lineColor);
   border-radius: 50%;
   width: 100%;
   height: 100%;
